--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="returnButton">Return</string>
     <string name="ShowCardButton">Show Card</string>
     <string name="AddCardButton">Add Card</string>
+    <string name="Logout" />
 </resources>
