Fixed register screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="Logout" />
     <string name="login_text">Sign In</string>
     <string name="register_text">Register</string>
+    <string name="passwordRegister">Password</string>
 </resources>
