Added a listView and easy functionality to add to the list just to get an rough idea /Anton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
     <string name="Forgotten_Password">Forgot Password?</string>
     <string name="Forgot_Password">Forgot Password?</string>
     <string name="Retrive_Password">Retrive Password</string>
+    <string name="Test_button">Test</string>
 
 </resources>
