Randomize a date to be added each time you add new button to make it more fun. Experiments with new libaries! //Anton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="Retrive_Password">Retrive Password</string>
     <string name="Test_button">Test</string>
     <string name="Show_Active_Cards">Display Active Cards</string>
+    <string name="Register_Text">Register</string>
 
 </resources>
