La till en dummy funktionalitet för att kunna emulera ett simpelt simpelt NFC kort. Vet ej om de funker då test ej kan genomföras.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="Test_button">Test</string>
     <string name="Show_Active_Cards">Display Active Cards</string>
     <string name="Register_Text">Register</string>
+    <string name="servicedesc">hej</string>
 
 </resources>
